# DatabasePractice

./: CMakeLists.txt  CMakePresets.json  helpers.cpp  helpers.hpp  main.cpp
.github/workflows/: cmake-single-platform.yml
tests/: helpers_test.cpp
